Добавляет разметку на главной

--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: {{projectTitle}}</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+  <meta name="description" content="Седона - туристический сайт">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="img/misc/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+</head>
+<body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<header class="page-header container">
+  <div class="logo-wrapper">
+    <img class="logo-wrapper-img" width="140" height="70" src="#" alt="Логотип сайта">
+  </div>
 
-  </body>
+  <nav class="navigation">
+    <a title="Перейти" class="navigation-link" href="#">Главная</a>
+    <a title="Перейти" class="navigation-link" href="#">О Седоне</a>
+    <a title="Перейти" class="navigation-link" href="#">Гостиницы</a>
+  </nav>
+
+  <div class="user-nav">
+    <button class="user-nav-search" aria-label="Поиск"></button>
+    <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
+    <a title="Получить преложение" class="user-nav-action-link">Хочу туда</a>
+  </div>
+</header>
+
+<main class="main-index">
+  <h1 class="visually-hidden">Туристический сайт Седона</h1>
+  <section class="hero-block container">
+    <div class="hero-block-subtitle">Welcome</div>
+    <div class="hero-block-title">Sedona</div>
+  </section>
+
+  <section class="about-box container">
+    <h2 class="about-box-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+    <p class="about-box-decription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+    <div class="about-box-squares">
+      <div class="about-box-square-item about-box-first">
+        <div class="square-item-title"></div>
+        <div class="square-item-description"></div>
+      </div>
+      <div class="about-box-square-item about-box-second"></div>
+      <div class="about-box-square-item about-box-third">
+          <div class="square-item-title"></div>
+          <div class="square-item-description"></div>
+      </div>
+      <div class="about-box-square-item about-box-fourth">
+        <div class="square-item-title"></div>
+        <div class="square-item-description"></div>
+      </div>
+      <div class="about-box-square-item about-box-fifth">
+        <div class="square-item-title"></div>
+        <div class="square-item-description"></div>
+      </div>
+      <div class="about-box-square-item about-box-sixth">
+        <div class="square-item-title"></div>
+        <div class="square-item-description"></div>
+      </div>
+      <div class="about-box-square-item about-box-seventh"></div>
+    </div>
+
+
+  </section> 
+
+
+
+</main>  
+
+
+<footer class="page-footer">
+</footer>  
+
+</body>
 </html>
