Добавляет блок преимуществ

--- a/index.html
+++ b/index.html
@@ -42,27 +42,53 @@
 
     <div class="about-box-squares">
       <div class="about-box-square-item about-box-first">
-        <div class="square-item-title"></div>
-        <div class="square-item-description"></div>
+        <div class="square-item-title">Настоящи городок</div>
+        <div class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</div>
       </div>
       <div class="about-box-square-item about-box-second"></div>
       <div class="about-box-square-item about-box-third">
-          <div class="square-item-title"></div>
-          <div class="square-item-description"></div>
+          <div class="square-item-title">Небольшая площадь</div>
+          <div class="square-item-description">Все достопримечательности находятся очень близко</div>
       </div>
       <div class="about-box-square-item about-box-fourth">
-        <div class="square-item-title"></div>
-        <div class="square-item-description"></div>
+        <div class="square-item-title">Красивая дорога</div>
+        <div class="square-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
       </div>
       <div class="about-box-square-item about-box-fifth">
-        <div class="square-item-title"></div>
-        <div class="square-item-description"></div>
+        <div class="square-item-title">Мало туристов</div>
+        <div class="square-item-description">Большинство едет в Гранд Каньон и толпится там</div>
       </div>
       <div class="about-box-square-item about-box-sixth">
-        <div class="square-item-title"></div>
-        <div class="square-item-description"></div>
+        <div class="square-item-title">Там есть мост дьявола</div>
+        <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
       </div>
       <div class="about-box-square-item about-box-seventh"></div>
+    </div>
+  </section>
+
+  <section class="advantages-box container">
+    <h2 class="advantages-box-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+    <p class="advantages-box-decription">Опытный персонал и качественное обслуживание!</p>
+
+    <div class="advantages-box-wrapper">
+      <div class="advantage-item">
+        <img class="advantage-item-img" width="75" height="72" src="#" alt="Доступное жильё">
+        <div class="advantage-item-title">Жильё</div>
+        <div class="advantage-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+      </div>
+
+      <div class="advantage-item">
+        <img class="advantage-item-img" width="74" height="70" src="#" alt="Вкусная еда">
+        <div class="advantage-item-title">Еда</div>
+        <div class="advantage-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
+      </div>
+
+      <div class="advantage-item">
+        <img class="advantage-item-img" width="75" height="72" src="#" alt="Сувениры на память">
+        <div class="advantage-item-title">Сувениры</div>
+        <div class="advantage-item-description">Не только китайского, но и настоящего местного производства!</div>
+      </div>
+
     </div>
 
 
