Добавляет разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -11,96 +11,131 @@
 </head>
 <body>
 
-<header class="page-header container">
-  <div class="logo-wrapper">
-    <img class="logo-wrapper-img" width="140" height="70" src="#" alt="Логотип сайта">
-  </div>
+  <header class="page-header container">
+    <div class="logo-wrapper">
+      <img class="logo-wrapper-img" width="140" height="70" src="#" alt="Логотип сайта">
+    </div>
 
-  <nav class="navigation">
-    <a title="Перейти" class="navigation-link" href="#">Главная</a>
-    <a title="Перейти" class="navigation-link" href="#">О Седоне</a>
-    <a title="Перейти" class="navigation-link" href="#">Гостиницы</a>
-  </nav>
+    <nav class="navigation">
+      <a title="Перейти" class="navigation-link" href="#">Главная</a>
+      <a title="Перейти" class="navigation-link" href="#">О Седоне</a>
+      <a title="Перейти" class="navigation-link" href="#">Гостиницы</a>
+    </nav>
 
-  <div class="user-nav">
-    <button class="user-nav-search" aria-label="Поиск"></button>
-    <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
-    <a title="Получить преложение" class="user-nav-action-link">Хочу туда</a>
-  </div>
-</header>
+    <div class="user-nav">
+      <button class="user-nav-search" aria-label="Поиск"></button>
+      <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
+      <a title="Получить преложение" class="user-nav-action-link">Хочу туда</a>
+    </div>
+  </header>
 
-<main class="main-index">
-  <h1 class="visually-hidden">Туристический сайт Седона</h1>
-  <section class="hero-block container">
-    <div class="hero-block-subtitle">Welcome</div>
-    <div class="hero-block-title">Sedona</div>
-  </section>
+  <main class="main-index">
+    <h1 class="visually-hidden">Туристический сайт Седона</h1>
+    <section class="hero-block container">
+      <div class="hero-block-subtitle">Welcome</div>
+      <div class="hero-block-title">Sedona</div>
+    </section>
 
-  <section class="about-box container">
-    <h2 class="about-box-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-    <p class="about-box-decription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+    <section class="about-box container">
+      <h2 class="about-box-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="about-box-decription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
-    <div class="about-box-squares">
-      <div class="about-box-square-item about-box-first">
-        <div class="square-item-title">Настоящи городок</div>
-        <div class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</div>
-      </div>
-      <div class="about-box-square-item about-box-second"></div>
-      <div class="about-box-square-item about-box-third">
+      <div class="about-box-squares">
+        <div class="about-box-square-item about-box-first">
+          <div class="square-item-title">Настоящи городок</div>
+          <div class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</div>
+        </div>
+        <div class="about-box-square-item about-box-second"></div>
+        <div class="about-box-square-item about-box-third">
           <div class="square-item-title">Небольшая площадь</div>
           <div class="square-item-description">Все достопримечательности находятся очень близко</div>
+        </div>
+        <div class="about-box-square-item about-box-fourth">
+          <div class="square-item-title">Красивая дорога</div>
+          <div class="square-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+        </div>
+        <div class="about-box-square-item about-box-fifth">
+          <div class="square-item-title">Мало туристов</div>
+          <div class="square-item-description">Большинство едет в Гранд Каньон и толпится там</div>
+        </div>
+        <div class="about-box-square-item about-box-sixth">
+          <div class="square-item-title">Там есть мост дьявола</div>
+          <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+        </div>
+        <div class="about-box-square-item about-box-seventh"></div>
       </div>
-      <div class="about-box-square-item about-box-fourth">
-        <div class="square-item-title">Красивая дорога</div>
-        <div class="square-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+    </section>
+
+    <section class="advantages-box container">
+      <h2 class="advantages-box-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+      <p class="advantages-box-decription">Опытный персонал и качественное обслуживание!</p>
+      <div class="advantages-box-wrapper">
+        <div class="advantage-item">
+          <img class="advantage-item-img" width="75" height="72" src="#" alt="Доступное жильё">
+          <div class="advantage-item-title">Жильё</div>
+          <div class="advantage-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+        </div>
+
+        <div class="advantage-item">
+          <img class="advantage-item-img" width="74" height="70" src="#" alt="Вкусная еда">
+          <div class="advantage-item-title">Еда</div>
+          <div class="advantage-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
+        </div>
+
+        <div class="advantage-item">
+          <img class="advantage-item-img" width="75" height="72" src="#" alt="Сувениры на память">
+          <div class="advantage-item-title">Сувениры</div>
+          <div class="advantage-item-description">Не только китайского, но и настоящего местного производства!</div>
+        </div>
       </div>
-      <div class="about-box-square-item about-box-fifth">
-        <div class="square-item-title">Мало туристов</div>
-        <div class="square-item-description">Большинство едет в Гранд Каньон и толпится там</div>
-      </div>
-      <div class="about-box-square-item about-box-sixth">
-        <div class="square-item-title">Там есть мост дьявола</div>
-        <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
-      </div>
-      <div class="about-box-square-item about-box-seventh"></div>
-    </div>
-  </section>
+    </section> 
 
-  <section class="advantages-box container">
-    <h2 class="advantages-box-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-    <p class="advantages-box-decription">Опытный персонал и качественное обслуживание!</p>
+    <section class="call-to-action container">
+      <h2 class="call-to-action-title">Заинтересовались?</h2>
+      <p class="call-to-action-decription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="call-to-action-link" href="#">ПОИСК ГОСТИНИЦЫ В Cедоне</a>
+    </section>
 
-    <div class="advantages-box-wrapper">
-      <div class="advantage-item">
-        <img class="advantage-item-img" width="75" height="72" src="#" alt="Доступное жильё">
-        <div class="advantage-item-title">Жильё</div>
-        <div class="advantage-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
-      </div>
+    <article class="email-block container">
+      <h2 class="email-block-title">Подпишитесь на рассылку</h2>
+      <p class="email-block-decription">Только полезная информация и никакого спама, честное бойскаутское! </p>
+      <div class="subscribe-form-box">
+        <form action="https://echo.htmlacademy.ru/" method="post">
+          <div class="subscribe-form-box-wrapper">              
+            <input type="text" name="signup-email" id="signup-email" class="signup-email-input" placeholder="Ваш e-mail" required>
+            <label for="signup-email" class="subscribe-form-box-label"></label> 
+            <button class="subscribe-form-button button" type="submit">Подписаться</button>
+          </div>
+        </form>
+      </div> 
+    </article> 
+  </main> 
 
-      <div class="advantage-item">
-        <img class="advantage-item-img" width="74" height="70" src="#" alt="Вкусная еда">
-        <div class="advantage-item-title">Еда</div>
-        <div class="advantage-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
-      </div>
+  <footer class="page-footer container">
+    <ul class="page-footer-social-list">
+      <li class="footer-social-item">
+        <a target="_blank" rel="nofollow noopener" class="footer-social-link vk" href="#">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a target="_blank" rel="nofollow noopener" class="footer-social-link telegram" href="https://t.me/htmlacademy">
+          <span class="visually-hidden">Телеграм</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a target="_blank" rel="nofollow noopener" class="footer-social-link twitter" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually-hidden">Ютуб</span>
+        </a>
+      </li>
+    </ul>
 
-      <div class="advantage-item">
-        <img class="advantage-item-img" width="75" height="72" src="#" alt="Сувениры на память">
-        <div class="advantage-item-title">Сувениры</div>
-        <div class="advantage-item-description">Не только китайского, но и настоящего местного производства!</div>
-      </div>
+    <div class="page-footer-phone">+7 (812) 812-12-12</div>
 
-    </div>
+    <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><img src="#" width="115" height="33" alt="html academy">
+    </a>
 
-
-  </section> 
-
-
-
-</main>  
-
-
-<footer class="page-footer">
-</footer>  
+  </footer>  
 
 </body>
 </html>
