Добавляет стили к главной

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="page-header container">
     <div class="logo-wrapper">
-      <img class="logo-wrapper-img" width="140" height="70" src="#" alt="Логотип сайта">
+      <img class="logo-wrapper-img" width="140" height="70" src="img/logo.svg" alt="Логотип сайта">
     </div>
 
     <nav class="navigation">
@@ -25,15 +25,15 @@
     <div class="user-nav">
       <button class="user-nav-search" aria-label="Поиск"></button>
       <button class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
-      <a title="Получить преложение" class="user-nav-action-link">Хочу туда</a>
+      <a title="Получить преложение" class="user-nav-action-link">Хочу туда!</a>
     </div>
   </header>
 
   <main class="main-index">
     <h1 class="visually-hidden">Туристический сайт Седона</h1>
     <section class="hero-block container">
-      <div class="hero-block-subtitle">Welcome</div>
-      <div class="hero-block-title">Sedona</div>
+      <div class="hero-block-subtitle"></div>
+      <div class="hero-block-title"></div>
     </section>
 
     <section class="about-box container">
@@ -58,11 +58,11 @@
           <div class="square-item-title">Мало туристов</div>
           <div class="square-item-description">Большинство едет в Гранд Каньон и толпится там</div>
         </div>
-        <div class="about-box-square-item about-box-sixth">
+        <div class="about-box-square-item about-box-sixth"></div>
+        <div class="about-box-square-item about-box-seventh">
           <div class="square-item-title">Там есть мост дьявола</div>
-          <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+          <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>        
         </div>
-        <div class="about-box-square-item about-box-seventh"></div>
       </div>
     </section>
 
@@ -70,20 +70,20 @@
       <h2 class="advantages-box-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
       <p class="advantages-box-decription">Опытный персонал и качественное обслуживание!</p>
       <div class="advantages-box-wrapper">
-        <div class="advantage-item">
-          <img class="advantage-item-img" width="75" height="72" src="#" alt="Доступное жильё">
+        <div class="advantage-item item-home">
+          <img class="advantage-item-img" width="75" height="72" src="img/home.svg" alt="Доступное жильё">
           <div class="advantage-item-title">Жильё</div>
           <div class="advantage-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
         </div>
 
         <div class="advantage-item">
-          <img class="advantage-item-img" width="74" height="70" src="#" alt="Вкусная еда">
+          <img class="advantage-item-img" width="74" height="70" src="img/food.svg" alt="Вкусная еда">
           <div class="advantage-item-title">Еда</div>
           <div class="advantage-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
         </div>
 
-        <div class="advantage-item">
-          <img class="advantage-item-img" width="75" height="72" src="#" alt="Сувениры на память">
+        <div class="advantage-item item-present">
+          <img class="advantage-item-img" width="75" height="72" src="img/present.svg" alt="Сувениры на память">
           <div class="advantage-item-title">Сувениры</div>
           <div class="advantage-item-description">Не только китайского, но и настоящего местного производства!</div>
         </div>
