Добавляет стили к главной

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </a>
       </li>
       <li class="footer-social-item">
-        <a target="_blank" rel="nofollow noopener" class="footer-social-link twitter" href="https://www.youtube.com/user/htmlacademyru">
+        <a target="_blank" rel="nofollow noopener" class="footer-social-link youtube" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">Ютуб</span>
         </a>
       </li>
@@ -132,7 +132,7 @@
 
     <div class="page-footer-phone">+7 (812) 812-12-12</div>
 
-    <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><img src="#" width="115" height="33" alt="html academy">
+    <a class="page-footer-copyright-link" href="https://htmlacademy.ru/"><img src="img/html-academy.svg" width="115" height="33" alt="html academy">
     </a>
 
   </footer>  
