--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
+  <title>HTML Academy: Седона Каталог</title>
   <meta name="description" content="Седона - туристический сайт">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/style.css">
@@ -30,71 +30,8 @@
   </header>
 
   <main class="main-index">
-    <h1 class="visually-hidden">Туристический сайт Седона</h1>
-    <section class="hero-block container">
-      <div class="hero-block-subtitle"></div>
-      <div class="hero-block-title"></div>
-    </section>
-
-    <section class="about-box container">
-      <h2 class="about-box-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="about-box-decription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-
-      <div class="about-box-squares">
-        <div class="about-box-square-item about-box-first">
-          <div class="square-item-title">Настоящи городок</div>
-          <div class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</div>
-        </div>
-        <div class="about-box-square-item about-box-second"></div>
-        <div class="about-box-square-item about-box-third">
-          <div class="square-item-title">Небольшая площадь</div>
-          <div class="square-item-description">Все достопримечательности находятся очень близко</div>
-        </div>
-        <div class="about-box-square-item about-box-fourth">
-          <div class="square-item-title">Красивая дорога</div>
-          <div class="square-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
-        </div>
-        <div class="about-box-square-item about-box-fifth">
-          <div class="square-item-title">Мало туристов</div>
-          <div class="square-item-description">Большинство едет в Гранд Каньон и толпится там</div>
-        </div>
-        <div class="about-box-square-item about-box-sixth"></div>
-        <div class="about-box-square-item about-box-seventh">
-          <div class="square-item-title">Там есть мост дьявола</div>
-          <div class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>        
-        </div>
-      </div>
-    </section>
-
-    <section class="advantages-box container">
-      <h2 class="advantages-box-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-      <p class="advantages-box-decription">Опытный персонал и качественное обслуживание!</p>
-      <div class="advantages-box-wrapper">
-        <div class="advantage-item item-home">
-          <img class="advantage-item-img" width="75" height="72" src="img/home.svg" alt="Доступное жильё">
-          <div class="advantage-item-title">Жильё</div>
-          <div class="advantage-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
-        </div>
-
-        <div class="advantage-item">
-          <img class="advantage-item-img" width="74" height="70" src="img/food.svg" alt="Вкусная еда">
-          <div class="advantage-item-title">Еда</div>
-          <div class="advantage-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
-        </div>
-
-        <div class="advantage-item item-present">
-          <img class="advantage-item-img" width="75" height="72" src="img/present.svg" alt="Сувениры на память">
-          <div class="advantage-item-title">Сувениры</div>
-          <div class="advantage-item-description">Не только китайского, но и настоящего местного производства!</div>
-        </div>
-      </div>
-    </section> 
-
-    <section class="call-to-action container">
-      <h2 class="call-to-action-title">Заинтересовались?</h2>
-      <p class="call-to-action-decription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="call-to-action-link" href="#">ПОИСК ГОСТИНИЦЫ В Cедоне</a>
-    </section>
+    <h1 class="visually-hidden">Страница каталога</h1>
+    
 
     <article class="email-block container">
       <h2 class="email-block-title">Подпишитесь на рассылку</h2>
