--- a/catalog.html
+++ b/catalog.html
@@ -31,6 +31,20 @@
 
   <main class="main-index">
     <h1 class="visually-hidden">Страница каталога</h1>
+
+    <section class="hero-block-filter">
+      <h2 class="hero-block-filter-title">Гостиницы Седоны</h2>
+      <div class="breadcrumbs">
+        <div class="breadcrumbs-home-icon breadcrumbs-item">
+          <span class="visually-hidden">На главную</span>
+        </div>
+        <span class="breadcrumbs-item">Гостиницы</span>
+      </div>
+
+      <div class="catalog-filter">
+        
+      </div>
+    </section>  
     
 
     <article class="email-block container">
