Добавляет разметку каталога

--- a/catalog.html
+++ b/catalog.html
@@ -134,20 +134,64 @@
 
       <div class="hotel-catalog-carts">
         <div class="hotel-catalog-carts-item">
-          <img width="300" height="212" class="hotel-catalog-carts-item-img" src="" alt="">
+          <img width="300" height="212" class="hotel-catalog-carts-item-img" src="img/hotel-amara.jpg" alt="">
           <div class="catalog-carts-item-description">
             <div class="hotel-name">Amara Resort & Spa</div>
             <div class="hotel-type">Гостиница</div>
             <div class="hotel-price">От 4000 ₽</div>
             <a class="hotel-read-more">подробнее</a>
             <button class="hotel-to-favourite">в избранное</button>
-            <div class="hotel-stars"></div>
+            <div class="hotel-stars four-stars"></div>
             <div class="hotel-raiting-amount">Рейтинг: 8,5</div>
           </div>
-        </div>  
-      </div> 
+        </div> 
+          <div class="hotel-catalog-carts-item">
+          <img width="300" height="212" class="hotel-catalog-carts-item-img" src="img/hotel-diablo.jpg" alt="">
+          <div class="catalog-carts-item-description">
+            <div class="hotel-name">Villas at Poco Diablo</div>
+            <div class="hotel-type">Гостиница</div>
+            <div class="hotel-price">От 5000 ₽</div>
+            <a class="hotel-read-more">подробнее</a>
+            <button class="hotel-to-favourite green-button">в избранном</button>
+            <div class="hotel-stars four-stars"></div>
+            <div class="hotel-raiting-amount">Рейтинг: 9,2</div>
+          </div>
+        </div>
+          <div class="hotel-catalog-carts-item">
+          <img width="300" height="212" class="hotel-catalog-carts-item-img" src="img/hotel-desert.jpg" alt="">
+          <div class="catalog-carts-item-description">
+            <div class="hotel-name">Desert Quail Inn</div>
+            <div class="hotel-type">Гостиница</div>
+            <div class="hotel-price">От 2500 ₽</div>
+            <a class="hotel-read-more">подробнее</a>
+            <button class="hotel-to-favourite">в избранное</button>
+            <div class="hotel-stars three-stars"></div>
+            <div class="hotel-raiting-amount">Рейтинг: 6,9</div>
+          </div>
+        </div> 
+          <div class="hotel-catalog-carts-item">
+          <img width="300" height="212" class="hotel-catalog-carts-item-img" src="img/hotel-green tree.jpg" alt="">
+          <div class="catalog-carts-item-description">
+            <div class="hotel-name">GreenTree Inn</div>
+            <div class="hotel-type">Гостиница</div>
+            <div class="hotel-price">От 1500 ₽</div>
+            <a class="hotel-read-more">подробнее</a>
+            <button class="hotel-to-favourite">в избранное</button>
+            <div class="hotel-stars two-stars"></div>
+            <div class="hotel-raiting-amount">Рейтинг: 5,0</div>
+          </div>
+        </div>   
+      </div>
 
-      <section>
+      <div class="pagination-box">
+        <div class="pagination-box-item current-page">1</div>
+        <div class="pagination-box-item">2</div>
+        <div class="pagination-box-item">3</div>
+        <div class="pagination-box-item">4</div>
+        <div class="pagination-box-item white-block">...</div>
+        <div class="pagination-box-item">10</div>
+      </div> 
+      </section>
 
 
         <article class="email-block container">
