Добавляет стили к фильтру

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="img/misc/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
 </head>
-<body>
+<body class="catalog-page">
 
   <header class="page-header container">
     <div class="logo-wrapper">
@@ -91,9 +91,9 @@
 
             <div class="catalog-filter-range-controls">
 
-              <div lass="catalog-filter-range-controls-price-wrapper">
-                <input class="controls-price-min" type="number" min="1" value="1">
-                <input class="controls-price-max" type="number" min="1" value="1">
+              <div class="catalog-filter-range-controls-price-wrapper">
+                <input class="controls-price-min" type="number" min="1" value="0">
+                <input class="controls-price-max" type="number" min="1" value="9000">
               </div>
 
               <div class="catalog-filter-scale">
