--- a/catalog.html
+++ b/catalog.html
@@ -92,8 +92,8 @@
             <div class="catalog-filter-range-controls">
 
               <div class="catalog-filter-range-controls-price-wrapper">
-                <input class="controls-price-min" type="number" min="1" value="0">
-                <input class="controls-price-max" type="number" min="1" value="9000">
+                <div class="price-min-wrapper"><input class="controls-price-min" type="number" min="1" value="0"></div>
+                <div class="price-max-wrapper"><input class="controls-price-max" type="number" min="1" value="9000"></div>
               </div>
 
               <div class="catalog-filter-scale">
