Добавляет стили  к каталогу

--- a/catalog.html
+++ b/catalog.html
@@ -97,16 +97,20 @@
               </div>
 
               <div class="catalog-filter-scale">
-                <div class="catalog-filter-bar"></div>
-              </div>
+                <div class="catalog-filter-bar">
+                  <div class="catalog-filter-bar-scale"></div>
+                </div>
               <button class="range-toggle range-toggle-min"></button>
               <button class="range-toggle range-toggle-max"></button>
+              </div>
+
             </div>
 
           </fieldset>
-
-          <button class="filter-button button" type="submit">Применить</button>
-          <button class="filter-button button" type="reset">Сбросить</button>
+          <div class="filter-button-wrapper">
+            <button class="filter-button button-apply" type="submit">Применить</button>
+            <button class="filter-button button-reset" type="reset">Сбросить</button>
+          </div>  
         </form>
         
         
